--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
   "devDependencies": {
     "@types/node": "^18.11.11",
     "@types/react": "^18",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.29.0",
     "eslint-config-next": "^13",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "typescript": "^4.9.4"
   }
 }
