--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@thirdweb-dev/react": "^4",
     "@thirdweb-dev/sdk": "^4",
     "ethers": "^5",
+    "mongoose": "^8.3.4",
     "next": "^13",
     "react": "^18.2",
-    "react-dom": "^18.2"
+    "react-dom": "^18.2",
+    "web3": "^4.8.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.11",
