--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,12 @@
     "jsx": "preserve",
     "incremental": true
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "utils/Database.js", "modal/UserData.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "utils/Database.js",
+    "modal/UserData.ts"
+  ],
   "exclude": ["node_modules"]
 }
