--- a/package.json
+++ b/package.json
@@ -20,14 +20,18 @@
     "clsx": "^2.1.1",
     "ethers": "^5.7.2",
     "lucide-react": "^0.378.0",
-    "react-icons": "^5.2.1",
     "mongoose": "^8.3.4",
     "next": "^13",
     "pino-pretty": "^11.0.0",
+    "query-string": "^9.0.0",
     "react": "^18.1",
     "react-dom": "^18.1",
+    "react-icons": "^5.2.1",
+    "react-tsparticles": "^2.12.2",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "tsparticles": "^3.3.0",
+    "tsparticles-slim": "^2.12.0",
     "web3": "^4.8.0"
   },
   "devDependencies": {
