--- a/package.json
+++ b/package.json
@@ -30,14 +30,17 @@
     "react-tsparticles": "^2.12.2",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.164.1",
     "tsparticles": "^3.3.0",
     "tsparticles-slim": "^2.12.0",
+    "vanta": "^0.5.24",
     "web3": "^4.8.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/three": "^0.164.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.29.0",
     "eslint-config-next": "^13",
